# src/controller/student.ts
@@ -42,7 +42,7 @@ export const addStudent = async (req: any, res: any) => {
 
 export const removeStudent = async (req: any, res: any) => {
   try {
-    Student.findByIdAndRemove(req.params.student_id).then((student) => {
+    Student.findByIdAndRemove(req.params.student_id).then((student: any) => {
       if (!student) {
         return res.status(404).send({
           success: false,
@@ -69,23 +69,21 @@ export const updateStudent = async (req: any, res: any) => {
     const updatedStudent = req.body;
     const updatedStudentData = { ...updatedStudent };
 
-    const student = await Student.findByIdAndUpdate(
-      studentId,
-      updatedStudentData,
-      { new: true, runValidators: true }
-    );
-
-    if (!student) {
-      return res.status(404).send({
-        success: false,
-        message: "Student not found",
+    await Student.findByIdAndUpdate(studentId, updatedStudentData, {
+      new: true,
+      runValidators: true,
+    }).then((student: any) => {
+      if (!student) {
+        return res.status(404).send({
+          success: false,
+          message: "Student not found",
+        });
+      }
+      return res.status(200).send({
+        success: true,
+        message: "Updated student information",
+        updated_student: student,
       });
-    }
-
-    return res.status(200).send({
-      success: true,
-      message: "Updated student information",
-      updated_student: student,
     });
   } catch (errors) {
     return res.status(500).send({
@@ -98,20 +96,47 @@ export const updateStudent = async (req: any, res: any) => {
 export const findStudentsByName = async (req: any, res: any) => {
   try {
     const name = req.query.name;
-    const students = await Student.find({ name: { $regex: `.*${name}`, $options: "i" } });
-    
+    const students = await Student.find({
+      name: { $regex: `.*${name}`, $options: "i" },
+    });
+
     if (!students || students.length === 0) {
       return res.status(404).send({
         success: false,
         message: `No students found with name ${name}`,
       });
     }
-    
+
     return res.status(200).send({
       success: true,
       message: `Found ${students.length} students with name ${name}`,
       students: students,
     });
+  } catch (errors) {
+    return res.status(500).send({
+      success: false,
+      errors,
+    });
+  }
+};
+
+export const findStudentById = async (req: any, res: any) => {
+  try {
+    const studentId = req.params.student_id;
+    await Student.findById(studentId).then((student: any) => {
+      if (!student) {
+        return res.status(404).send({
+          success: false,
+          message: `No student found with ID ${studentId}`,
+        });
+      }
+  
+      return res.status(200).send({
+        success: true,
+        message: `Found student with ID ${studentId}`,
+        student: student,
+      });
+    });    
   } catch (errors) {
     return res.status(500).send({
       success: false,
