# src/routes/student.ts
@@ -5,6 +5,7 @@ import {
   removeStudent,
   updateStudent,
   findStudentsByName,
+  findStudentById
 } from "../controller/student";
 
 const studentRoute = express.Router();
@@ -13,6 +14,7 @@ studentRoute.get("/student-list", getStudentList);
 studentRoute.post("/add-student", addStudent);
 studentRoute.delete("/remove-student/:student_id", removeStudent);
 studentRoute.put("/update-student/:student_id", updateStudent);
-studentRoute.get("/find", findStudentsByName);
+studentRoute.get("/find-by-name", findStudentsByName);
+studentRoute.get("/find-by-id/:student_id", findStudentById);
 
 export default studentRoute;
